--- a/src/styles/blocks/sticker.css
+++ b/src/styles/blocks/sticker.css
@@ -30,9 +30,10 @@
   font-weight: var(--font-wgt-bold);
   max-width: 80%;
   min-width: 75%;
-  margin: -25px auto 0;
+  margin: 0 auto 0;
   z-index: 2;
   position: relative;
+  transform: translateY(-25px);
 
   @media screen and (min-width: 992px) {
     font-size: 24px;
