--- a/src/styles/components/list.css
+++ b/src/styles/components/list.css
@@ -41,8 +41,8 @@
     &:before {
       inset-inline-start: 0;
       inset-inline-end: auto;
-      right: 0;
-      left: auto;
+      inset-inline-end: 0;
+      inset-inline-start: auto;
     }
   }
 }
